comments and start new lab

--- a/Практика_1.ipynb
+++ b/Практика_1.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 160,
       "metadata": {
         "id": "cAklc2-4_hag"
       },
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 161,
       "metadata": {
         "id": "_AxEco9xAAvN"
       },
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 162,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -273,7 +273,7 @@
               "4  12/1/2010 8:45       0.65     12583.0  France  "
             ]
           },
-          "execution_count": 144,
+          "execution_count": 162,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 163,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 164,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -431,7 +431,7 @@
               "max     912.000000  4161.060000  14277.000000"
             ]
           },
-          "execution_count": 146,
+          "execution_count": 164,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 165,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -460,7 +460,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 147,
+          "execution_count": 165,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 166,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -670,7 +670,7 @@
               "[8557 rows x 8 columns]"
             ]
           },
-          "execution_count": 148,
+          "execution_count": 166,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 167,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -802,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 168,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 169,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -964,7 +964,7 @@
               "max     912.000000  4161.060000  14277.000000"
             ]
           },
-          "execution_count": 151,
+          "execution_count": 169,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 170,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1043,7 +1043,15 @@
         "   plt.title('Распределение Quantity per invoice')\n",
         "   plt.xlabel('Quantity per invoice')\n",
         "   plt.ylabel('Частота')\n",
+        "   plt.xlim(-100, 1000)\n",
         "   plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Помогает визуализировать распределение количества товаров в каждом инвойсе, что может быть полезно для анализа данных. Видно, "
       ]
     },
     {
@@ -1057,7 +1065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 171,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1097,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 172,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1174,7 +1182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 173,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
