--- a/Практика_1.ipynb
+++ b/Практика_1.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 31,
       "metadata": {
         "id": "cAklc2-4_hag"
       },
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 32,
       "metadata": {
         "id": "_AxEco9xAAvN"
       },
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -273,7 +273,7 @@
               "4  12/1/2010 8:45       0.65     12583.0  France  "
             ]
           },
-          "execution_count": 162,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -431,7 +431,7 @@
               "max     912.000000  4161.060000  14277.000000"
             ]
           },
-          "execution_count": 164,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -460,7 +460,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 165,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -670,7 +670,7 @@
               "[8557 rows x 8 columns]"
             ]
           },
-          "execution_count": 166,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -802,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -964,7 +964,7 @@
               "max     912.000000  4161.060000  14277.000000"
             ]
           },
-          "execution_count": 169,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1043,7 +1043,6 @@
         "   plt.title('Распределение Quantity per invoice')\n",
         "   plt.xlabel('Quantity per invoice')\n",
         "   plt.ylabel('Частота')\n",
-        "   plt.xlim(-100, 1000)\n",
         "   plt.show()"
       ]
     },
@@ -1051,7 +1050,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Помогает визуализировать распределение количества товаров в каждом инвойсе, что может быть полезно для анализа данных. Видно, "
+        "Помогает визуализировать распределение количества товаров в каждом инвойсе, что может быть полезно для анализа данных. Видно, ято присутствуют отрицательные значения, возможно - возврат. Часты небольшие чеки как на возврат, так и на покупку"
       ]
     },
     {
@@ -1065,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1096,6 +1095,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Большое количество градаций качества, однако тут меньшее количество уникальных значений"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "A_u0EaAxDpdY"
       },
@@ -1105,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1131,6 +1137,13 @@
         "   plt.title('Boxplot Quantity')\n",
         "   plt.xlabel('Quantity')\n",
         "   plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "После 1000 выбросов практически нет. Основные значения находятся в промежутке от ~-200 до 1000"
       ]
     },
     {
@@ -1182,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1215,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 45,
       "metadata": {
         "id": "6tI82fozG1wk"
       },
@@ -1333,7 +1346,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -1346,7 +1360,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.5"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
