--- a/Практика_6_(Кластеризация).ipynb
+++ b/Практика_6_(Кластеризация).ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "id": "9bBH0qCj78Gl"
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "id": "WqAWAfCf8CJb"
    },
@@ -111,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3344/2544090457.py:6: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "/tmp/ipykernel_17995/2544090457.py:6: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  df.type_white = df['income >50K'].astype(int)\n"
      ]
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "id": "coE20mj58Ebk"
    },
@@ -144,7 +144,7 @@
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "# Выбираем числовые признаки\n",
-    "numeric_features = df.select_dtypes(include=['int64']).columns.tolist()\n",
+    "numeric_features = df.select_dtypes(include=['float64', 'int64']).columns.tolist()\n",
     "\n",
     "# Инициализируем scaler\n",
     "scaler = MinMaxScaler()\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -587,7 +587,7 @@
        "[32561 rows x 97 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -669,6 +669,13 @@
     "outputId": "0269b93c-ec41-4907-f459-391364558c27"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "426.15s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -702,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -727,7 +734,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebdd6af2b57b428c865e95506c38edae",
+       "model_id": "34d4f42b15864b68926b72e4169cb82e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -768,6 +775,8 @@
     "        np.random.seed(42)\n",
     "        centroids = X[np.random.choice(X.shape[0], k, replace=False)]\n",
     "        for step in range(max_iters):\n",
+    "            X = np.array(X, dtype=np.float64)\n",
+    "            centroids = np.array(centroids, dtype=np.float64)\n",
     "            distances = np.linalg.norm(X[:, np.newaxis] - centroids, axis=2)\n",
     "            labels = np.argmin(distances, axis=1)\n",
     "            plot_kmeans_iteration(X, centroids, labels, step)\n",
@@ -800,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1615,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1643,7 +1652,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2bae7c463bf478fa965a93da606c2a8",
+       "model_id": "b393fcee87d44369bd3649fa0a93e577",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1657,7 +1666,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eac101a74d9145eb8e2a5b7aea1b842a",
+       "model_id": "cab952aac13e4316946b1288cd99b9c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1730,15 +1739,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "5DL87WBciGEL"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "zqPCilOXEfFP"
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3567,7 +3567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3608,7 +3608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3669,7 +3669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3760,18 +3760,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "id": "Q0YmKDx8I7Vl"
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "580.92s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nltk in ./venv/lib/python3.12/site-packages (3.9.1)\n",
-      "Collecting pymorphy3\n",
-      "  Downloading pymorphy3-2.0.2-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Requirement already satisfied: pymorphy3 in ./venv/lib/python3.12/site-packages (2.0.2)\n",
       "Requirement already satisfied: scikit-learn in ./venv/lib/python3.12/site-packages (1.5.2)\n",
       "Requirement already satisfied: setuptools in ./venv/lib/python3.12/site-packages (75.6.0)\n",
       "Requirement already satisfied: stopwords in ./venv/lib/python3.12/site-packages (1.0.1)\n",
@@ -3780,17 +3786,10 @@
       "Requirement already satisfied: regex>=2021.8.3 in ./venv/lib/python3.12/site-packages (from nltk) (2024.11.6)\n",
       "Requirement already satisfied: tqdm in ./venv/lib/python3.12/site-packages (from nltk) (4.67.1)\n",
       "Requirement already satisfied: dawg-python>=0.7.1 in ./venv/lib/python3.12/site-packages (from pymorphy3) (0.7.2)\n",
-      "Collecting pymorphy3-dicts-ru (from pymorphy3)\n",
-      "  Downloading pymorphy3_dicts_ru-2.4.417150.4580142-py2.py3-none-any.whl.metadata (2.0 kB)\n",
+      "Requirement already satisfied: pymorphy3-dicts-ru in ./venv/lib/python3.12/site-packages (from pymorphy3) (2.4.417150.4580142)\n",
       "Requirement already satisfied: numpy>=1.19.5 in ./venv/lib/python3.12/site-packages (from scikit-learn) (2.1.2)\n",
       "Requirement already satisfied: scipy>=1.6.0 in ./venv/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in ./venv/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
-      "Downloading pymorphy3-2.0.2-py3-none-any.whl (53 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.8/53.8 kB\u001b[0m \u001b[31m244.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading pymorphy3_dicts_ru-2.4.417150.4580142-py2.py3-none-any.whl (8.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.4/8.4 MB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m0m\n",
-      "\u001b[?25hInstalling collected packages: pymorphy3-dicts-ru, pymorphy3\n",
-      "Successfully installed pymorphy3-2.0.2 pymorphy3-dicts-ru-2.4.417150.4580142\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -3801,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3830,11 +3829,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {
     "id": "jhG_ZWyjKfi6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'articles.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m russian_stopwords \u001b[38;5;241m=\u001b[39m stopwords\u001b[38;5;241m.\u001b[39mwords(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrussian\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Чтение данных из файла\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43marticles.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      7\u001b[0m     content \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Разделяем данные на статьи\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/staff/web-python/venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'articles.txt'"
+     ]
+    }
+   ],
    "source": [
     "# Инициализируем лемматизатор и список стоп-слов\n",
     "morph = pymorphy3.MorphAnalyzer()\n",
@@ -3863,7 +3875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3879,7 +3891,7 @@
        " 'Научная работа с описанием исследования и результатами эксперимента опубликована в журнале Science. Ее авторы — ученые из Берлинского центра материалов и энергии имени Гельмгольца (Helmholtz-Zentrum Berlin, Германия), Потсдамского университета (Германия) и Шеффилдского университета (Великобритания), а также специалисты из Каунасского технологического университета (Литва) и Люблянского университета (Словения). В теоретической части исследования рассматриваются перспективы повышения эффективности существующих технологий производства солнечных панелей. Материалы со структурой перовскитов не первый год привлекают внимание ученых в качестве альтернативы кремнию. Однако фотоэлектрические преобразователи этого типа получаются либо токсичными при разрушении (на основе свинца), либо недостаточно эффективными (на основе олова). При этом они все равно могут быть существенно дешевле кремниевых солнечных батарей. Гипотетически существует множество способов радикально поднять эффективность фотоэлектрических преобразователей на основе перовскитов. Но до сих пор большинство из них так и не вышли за стены лабораторий. Также высказывались предложения объединить кремний и перовскиты в тандемный монолитный слой. Подобный материал может иметь высокую эффективность при преобразовании света в электричество. Авторы описываемой научной работы подобрали необходимые химические соединения для такой батареи. Свои теоретические выкладки они проверили на экспериментальном образце. Фотопреобразователь выдавал стабильное напряжение в 1,92 вольта и продемонстрировал эффективность 29,15%. При этом, несмотря на отсутствие защитного покрытия, активный слой сохранил характеристики на 95% во время испытаний длительностью 300 часов. В будущих исследованиях ученые планируют решить несколько прикладных и теоретических задач. Во-первых, еще при работе над этой статьей у команды появилось несколько идей повысить эффективность фотопреобразователя. А во-вторых, необходимо отладить технологический процесс производства и проверить, насколько легко его можно реализовать в промышленных масштабах. Результаты эксперимента показывают, что при сравнимой стоимости с кремниевыми солнечными батареями новые тандемные с перовскитом будут эффективнее и не менее долговечными.']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3911,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4076,7 +4088,7 @@
        " 'между']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
